Доработка сервиса статистики