@@ -1,6 +1,8 @@
 package ru.practicum.stats.server.mapper;
 
-import org.springframework.stereotype.Component;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import ru.practicum.stats.dto.EndpointHitDto;
 import ru.practicum.stats.dto.ViewStatsDto;
 import ru.practicum.stats.server.model.EndpointHit;
 
@@ -10,8 +12,18 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-@Component
-public class StatsMapper {
+@Mapper(componentModel = "spring")
+public abstract class StatsMapper {
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "timestamp", ignore = true)
+    public abstract EndpointHit toEndpointHit(EndpointHitDto dto);
+
+    @Mapping(target = "app", source = "hit.app")
+    @Mapping(target = "uri", source = "hit.uri")
+    @Mapping(target = "hits", source = "hits")
+    public abstract ViewStatsDto toViewStatsDto(EndpointHit hit, Long hits);
+
     public List<ViewStatsDto> toViewStatsDtoList(List<EndpointHit> hits, boolean unique) {
         Map<String, List<EndpointHit>> groupedHits = new LinkedHashMap<>();
 
@@ -38,11 +50,15 @@ public class StatsMapper {
     }
 
     private ViewStatsDto toViewStatsDto(List<EndpointHit> hits, boolean unique) {
-        EndpointHit firstHit = hits.get(0);
+        if (hits.isEmpty()) {
+            throw new IllegalArgumentException("Список посещений не должен быть пустым");
+        }
+
+        EndpointHit firstHit = hits.getFirst();
         long count = unique
                 ? hits.stream().map(EndpointHit::getIp).distinct().count()
                 : hits.size();
 
-        return new ViewStatsDto(firstHit.getApp(), firstHit.getUri(), count);
+        return toViewStatsDto(firstHit, count);
     }
 }
